# mlops

./: AImodel.py  Forms.py  __init__.py  app.py  data.dvc  data.json  pyproject.toml  requirements.txt
.dvc/: config
MLopsAssignment/: Makefile  README.md
config/model/: model1.yaml  model2.yaml
data/: .gitignore  01_homely_resort_listing.csv  01_homely_resort_listing.csv.dvc  02_mushroom_data.csv  02_mushroom_data.csv.dvc
mlruns/0/: meta.yaml
models/: mushroomclass.pkl  regression.pkl
notebooks/: 211602c_assignment_classification.ipynb  213002D_Assignment.ipynb
notebooks/.ipynb_checkpoints/: 211602C_assignment_EDA-checkpoint.ipynb
notebooks/mlruns/0/: meta.yaml
notebooks/mlruns/628188644388487782/: meta.yaml
notebooks/mlruns/628188644388487782/1175e72562e640ccb02725d1af523315/: meta.yaml
notebooks/mlruns/628188644388487782/2b8ff64d486c4935bdd0fa5fe4a4c57b/: meta.yaml
notebooks/mlruns/628188644388487782/2bd481e7daa1495b9f0253c2b5d3a267/: meta.yaml
notebooks/mlruns/628188644388487782/3130fe11bc8d4da1ab28bac628e333ef/: meta.yaml
notebooks/mlruns/628188644388487782/359dba9348464fb692f368d1b743f12c/: meta.yaml
notebooks/mlruns/902923692474014990/: meta.yaml
notebooks/mlruns/917733845989334882/: meta.yaml
notebooks/mlruns/950217056691076510/: meta.yaml
src/: classification.py  process.py  regression.py  script_run.ipynb  script_run_regression.ipynb
static/css/: nav.css  style.css
templates/: classification.html  home.html  index.html  regression.html  single_prediction.html
(+8102 files in other folders)
