[tool.poetry]
name = "mlopsassignment"
version = "0.1.0"
description = ""
authors = ["kaijie-sharina"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10"
dvc = "^3.47.0"
hydra-core = "^1.3.2"
pdoc3 = "^0.10.0"
numpy = "^1.26.4"
pandas = "^2.2.0"
requests = "^2.31.0"
Flask = "^3.0.2"
seaborn = "^0.13.2"
pycaret = "^3.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
