[tool.poetry]
name = "mlops"
version = "0.1.1"
description = ""
authors = ["kaijie-sharina"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9, <3.12"
dvc = "^3.47.0"
hydra-core = "^1.3.2"
pdoc3 = "^0.10.0"
numpy = "^1.26.4"
pandas = "^2.1.0"
requests = "^2.31.0"
Flask = "^3.0.2"
seaborn = "^0.13.2"
pycaret = "^3.3.0"
kaleido = "0.2.1"
ipykernel = "^6.29.2"
mlflow = "^2.10.2"
gunicorn = "^21.2.0"
app = "^0.0.1"
wtforms = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
